--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,10 +1,10 @@
 # Experiment configuration
-experiment_name: "gepa_tutor_refinery"
+experiment_name: agieval_lsat_lr
 seed: 42
 
 dataset:
   # one of: synthetic | race | arc_easy | arc_challenge
-  name: "synthetic"
+  name: agieval_lsat_lr
   subset: "middle"   # only for race: middle|high
   n_train: 30
   n_dev: 10
@@ -12,9 +12,14 @@ dataset:
 
 model:
   # provider: mock | openai | anthropic
-  provider: "mock"
-  # model_id used if provider != mock
-  model_id: "gpt-4o-mini"
+  # Set to "openai" or "anthropic" to use real LLMs
+  # Make sure to set OPENAI_API_KEY or ANTHROPIC_API_KEY environment variables
+  provider: "openai"  # Using OpenAI with API key from .env
+  
+  # OpenAI models: gpt-4o, gpt-4o-mini, gpt-4-turbo, gpt-3.5-turbo
+  # Anthropic models: claude-3-5-sonnet-20241022, claude-3-haiku-20240307
+  model_id: "gpt-3.5-turbo"  # Using 3.5-turbo for more realistic challenge
+  
   temperature: 0.2
   max_output_tokens: 256
   request_timeout: 60
@@ -33,3 +38,10 @@ gepa:
 
 logging:
   runs_dir: "runs"
+
+# Environment Variables Required:
+# For OpenAI: export OPENAI_API_KEY="your-api-key-here"
+# For Anthropic: export ANTHROPIC_API_KEY="your-api-key-here"
+# 
+# To switch providers, change the "provider" field above and ensure the corresponding
+# API key is set in your environment.
