Phase 3 Implementation: Intelligent confidence scoring and prompt optimization
- Enhanced confidence scoring with sophisticated criteria (flaw detection, reasoning quality, correction specificity)
- Lowered confidence threshold from 0.5 to 0.35 for more aggressive GEPA overrides
- Fixed prompt rendering to show dataset-specific prompts in evaluation records
- Added format training examples to all prompts (TruthfulQA-MC, LSAT-LR, generic)
- Updated confidence scoring to consider: flaw identification, logical reasoning, strong language, output conciseness
- Added bonus points for specific corrections and answer changes
- Comprehensive documentation updates across all tracking files
- Phase 3.1-3.3 implementation complete, ready for testing and analysis

Expected impact: Higher GEPA override rates should improve hybrid accuracy from 0.0% baseline

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,10 +1,10 @@
 # Experiment configuration
-experiment_name: agieval_lsat_lr
+experiment_name: truthfulqa_official
 seed: 42
 
 dataset:
   # one of: synthetic | race | arc_easy | arc_challenge
-  name: agieval_lsat_lr
+  name: truthfulqa_official
   subset: "middle"   # only for race: middle|high
   n_train: 30
   n_dev: 10
