--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,10 +1,10 @@
 # Experiment configuration
-experiment_name: truthfulqa_official
+experiment_name: gpqa_diamond
 seed: 42
 
 dataset:
   # one of: synthetic | race | arc_easy | arc_challenge
-  name: truthfulqa_official
+  name: gpqa_diamond
   subset: "middle"   # only for race: middle|high
   n_train: 30
   n_dev: 10
